Pagina por pasos
Se ha creado una aplicación mas fácil y sencilla de usar. Por medio de
pasos el usuario podrá crear sus creatividad sin tanto problema

--- a/upload/share/0681486001432664679.html
+++ b/upload/share/0681486001432664679.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,11 +6,11 @@
 	<meta name="viewport" container="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="./css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 	<link href="./css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
-	<meta content="http://archermediaworks.com/greenscreen/0008674001431988453.html" property="og:url">
+	<meta content="http://archermediaworks.com/greenscreen/0681486001432664679.html" property="og:url">
 	<meta content="Archer Troy - Activación" property="og:title">
 	<meta content="Archer Troy es una agencia integral e independiente. Nuestra arma de conquista son las ideas, entre mas grandes, más poderosas: Ideas que Conquistan." property="og:description">
 	<meta content="archertroy activacion" property="og:site_name">
-	<meta content="http://archermediaworks.com/greenscreen/0008674001431988453.png" property="og:image">
+	<meta content="http://archermediaworks.com/greenscreen/0681486001432664679.png" property="og:image">
 	<style type="text/css">
 		@font-face {
 		    font-family: "textB";
@@ -133,21 +134,21 @@
 			</div>
 
 			<div class="col-md-6">
-				<img class="principalImg" src="http://archermediaworks.com/greenscreen/0008674001431988453.png"/>
+				<img class="principalImg" src="http://archermediaworks.com/greenscreen/0681486001432664679.png"/>
 			</div>
 
 			<div class="col-md-6">
 
-				<h1 class="website shortlink"><a class="website" href="http://goo.gl/HMvaGm" target="_blank">http://goo.gl/HMvaGm</a></h1>
-				<img class="qrcodeImg" src="http://archermediaworks.com/greenscreen/QR0008674001431988453.png"/>
+				<h1 class="website shortlink"><a class="website" href="http://goo.gl/EGcdqO" target="_blank">http://goo.gl/EGcdqO</a></h1>
+				<img class="qrcodeImg" src="http://archermediaworks.com/greenscreen/QR0681486001432664679.png"/>
 
 				<div class="col-md-12 share">
 
 					<div class="col-md-6 redes">
-						<a class="redes" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://goo.gl/HMvaGm"><i class="fa fa-facebook fa-4x"></i></a>
+						<a class="redes" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://goo.gl/EGcdqO"><i class="fa fa-facebook fa-4x"></i></a>
 					</div>
 					<div class="col-md-6 redes">
-						<a class="redes" target="_blank" href="https://twitter.com/home?status=http://goo.gl/HMvaGm"><i class="fa fa-twitter fa-4x"></i></a>
+						<a class="redes" target="_blank" href="https://twitter.com/home?status=http://goo.gl/EGcdqO"><i class="fa fa-twitter fa-4x"></i></a>
 					</div>
 					
 				</div>
